--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.nav1{
+    border: 2px solid red;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.h1{
+    font-family:'Times New Roman', Times, serif;
+    font-weight: 100;
+    font-size: 39px;
+    color: rgb(240, 105, 1);
 }
